Fix HTML encoding issues and update image paths

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images\image 1.jpg" id="logo" />
+                <img src="./images/image 1.jpg" id="logo" />
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -35,7 +35,7 @@
         <div class="container"></div>
         <div class="row">
           <div class="about-col-1">
-            <img src="images\image3.jpg" />
+            <img src="./images/image3.jpg" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
@@ -127,7 +127,7 @@
           <h1 class="sub-title">My work</h1>
           <div class="work-list">
             <div class="work">
-              <img src="images\WhatsApp Image 2025-02-07 at 08.55.39_560ce32c.jpg" />
+              <img src="./images/WhatsApp Image 2025-02-07 at 08.55.39_560ce32c.jpg" />
               <div class="layer">
                 <h3>Social Media Apps</h3>
                 <p>
@@ -140,7 +140,7 @@
               </div>
             </div>
             <div class="work">
-              <img src="images\WhatsApp Image 2025-02-07 at 08.55.40_df60b332.jpg" />
+              <img src="./images/WhatsApp Image 2025-02-07 at 08.55.40_df60b332.jpg" />
               <div class="layer">
                 <h3>Portfolio Website</h3>
                 <p>
@@ -154,7 +154,7 @@
             </div>
   
             <div class="work">
-              <img src="images\WhatsApp Image 2025-02-07 at 08.55.41_923fbe41.jpg" />
+              <img src="./images/WhatsApp Image 2025-02-07 at 08.55.41_923fbe41.jpg" />
               <div class="layer">
                 <h3>Gaming Website</h3>
                 <p>
@@ -185,4 +185,5 @@
     }
   </script>
    </body>
+
   </html>  
